lang.bnf
parse = statement_list;
statement_list = statement ';' statement_list | empty
statement = vardecl | expression;
expression = addition;
addition = multiplication ('+' | '-') addition | multiplication;
multiplication = parens ('*' | '/' | '%') multiplication | parens;
parens = '(' expression ')' | literal;
vardecl = ['const'] type variable '=' expression;
type = int | float | string;
literal = integer | float | variable; 
